--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+    
+    <ol>
+        <li data-ns-test="shoppingList">Contact lens</li>
+        <li data-ns-test="shoppingList">Contact lens</li>
+        <li data-ns-test="shoppingList">Contact lens</li>
+    </ol>
+
+    <ul>
+        <li data-ns-test="holidayList">Chennai</li>
+        <li data-ns-test="holidayList">Chennai</li>
+        <li data-ns-test="holidayList">Chennai</li>
+    </ul>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
